--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,5 +8,31 @@
 </head>
 <body>
     <h1>Hello</h1>
+
+    <h3>Register Form</h3>
+    <form id="register-form">
+        <input type="email" name="email">
+        <input type="password" name="password" >
+        <button type="submit">Register</button>
+    </form>
+<script>
+    (() => {
+        const form = document.getElementById('register-form');
+        form.addEventListener("submit", (e) => {
+            e.preventDefault();
+            const values = Object.values(form).reduce((obj, field) => {
+                if(field.name){
+                    obj[field.name] = field.value;
+                }
+                return obj;
+            }, {})
+            console.log("values", values)
+        });
+    })();
+
+
+
+
+</script>
 </body>
 </html>
