--- a/src/public/index.html
+++ b/src/public/index.html
@@ -18,15 +18,23 @@
 <script>
     (() => {
         const form = document.getElementById('register-form');
-        form.addEventListener("submit", (e) => {
+        form.addEventListener("submit", async (e) => {
             e.preventDefault();
-            const values = Object.values(form).reduce((obj, field) => {
-                if(field.name){
-                    obj[field.name] = field.value;
-                }
-                return obj;
-            }, {})
-            console.log("values", values)
+            try {
+                const values = Object.values(form).reduce((obj, field) => {
+                    if(field.name){
+                        obj[field.name] = field.value;
+                    }
+                    return obj;
+                }, {})
+                const res = await fetch('/api/register', {
+                    method:"POST",
+                    body: JSON.stringify(values),
+                    headers: {"Content-type": "application/json; charset=UTF-8"}
+                })
+            } catch (error) {
+                console.error(error)
+            }
         });
     })();
 
