change password flow created and finished

--- a/ui/src/public/index.html
+++ b/ui/src/public/index.html
@@ -32,6 +32,24 @@
     <hr>
     <br>
 
+    <h3>Change Password</h3>
+    <form id="change-form">
+        <label for="oldPassword">
+            Old Password
+            <input type="password" name="oldPassword">
+        </label>
+        <label for="newPassword">
+            New Password
+            <input type="password" name="newPassword" >
+        </label>
+        <button type="submit">Change Password</button>
+    </form>
+
+    <br>
+    <br>
+    <hr>
+    <br>
+
     <button onclick="logout()">Logout</button>
 
 <script>
@@ -80,6 +98,27 @@
                     return obj;
                 }, {})
                 const res = await fetch('https://api.nodeauth.dev/api/authorize', {
+                    method:"POST",
+                    body: JSON.stringify(values),
+                    credentials: 'include',
+                    headers: {"Content-type": "application/json; charset=UTF-8"}
+                })
+            } catch (error) {
+                console.error(error)
+            }
+        });
+
+        const changeForm = document.getElementById('change-form');
+        changeForm.addEventListener("submit", async (e) => {
+            e.preventDefault();
+            try {
+                const values = Object.values(changeForm).reduce((obj, field) => {
+                    if(field.name){
+                        obj[field.name] = field.value;
+                    }
+                    return obj;
+                }, {})
+                const res = await fetch('https://api.nodeauth.dev/api/change-password', {
                     method:"POST",
                     body: JSON.stringify(values),
                     credentials: 'include',
