--- a/ui/src/public/index.html
+++ b/ui/src/public/index.html
@@ -56,7 +56,8 @@
     async function logout() {
         try {
             const res = await fetch('https://api.nodeauth.dev/api/logout', {
-                    method:"POST",
+                    method: "POST",
+                    credentials: "include",
                 })
         } catch (error) {
             console.error(error)
