created forgot password flow

--- a/ui/src/public/index.html
+++ b/ui/src/public/index.html
@@ -50,6 +50,20 @@
     <hr>
     <br>
 
+    <h3>Forgot Password</h3>
+    <form id="forgot-password-form">
+        <label for="email">
+            Email
+            <input type="email" name="email">
+        </label>
+        <button type="submit">Send Forgot Email</button>
+    </form>
+
+    <br>
+    <br>
+    <hr>
+    <br>
+
     <button onclick="logout()">Logout</button>
 
 <script>
@@ -64,6 +78,15 @@
         }
     }
 
+    function getValues (form) {
+        return Object.values(form).reduce((obj, field) => {
+                    if(field.name){
+                        obj[field.name] = field.value;
+                    }
+                    return obj;
+                }, {})
+    }
+
     (() => {
         //Find form element
         const registerForm = document.getElementById('register-form');
@@ -71,12 +94,8 @@
         registerForm.addEventListener("submit", async (e) => {
             e.preventDefault();
             try {
-                const values = Object.values(registerForm).reduce((obj, field) => {
-                    if(field.name){
-                        obj[field.name] = field.value;
-                    }
-                    return obj;
-                }, {})
+                const values = getValues(registrationForm)
+             
                 const res = await fetch('https://api.nodeauth.dev/api/register', {
                     method:"POST",
                     body: JSON.stringify(values),
@@ -92,12 +111,8 @@
         loginForm.addEventListener("submit", async (e) => {
             e.preventDefault();
             try {
-                const values = Object.values(loginForm).reduce((obj, field) => {
-                    if(field.name){
-                        obj[field.name] = field.value;
-                    }
-                    return obj;
-                }, {})
+                const values = getValues(loginForm)
+
                 const res = await fetch('https://api.nodeauth.dev/api/authorize', {
                     method:"POST",
                     body: JSON.stringify(values),
@@ -113,13 +128,26 @@
         changeForm.addEventListener("submit", async (e) => {
             e.preventDefault();
             try {
-                const values = Object.values(changeForm).reduce((obj, field) => {
-                    if(field.name){
-                        obj[field.name] = field.value;
-                    }
-                    return obj;
-                }, {})
+                const values = getValues(changeForm)
+
                 const res = await fetch('https://api.nodeauth.dev/api/change-password', {
+                    method:"POST",
+                    body: JSON.stringify(values),
+                    credentials: 'include',
+                    headers: {"Content-type": "application/json; charset=UTF-8"}
+                })
+            } catch (error) {
+                console.error(error)
+            }
+        });
+
+        const forgotForm = document.getElementById('forgot-password-form');
+        forgotForm.addEventListener("submit", async (e) => {
+            e.preventDefault();
+            try {
+                const values = getValues(forgotForm)
+
+                const res = await fetch('https://api.nodeauth.dev/api/forgot-password', {
                     method:"POST",
                     body: JSON.stringify(values),
                     credentials: 'include',
